# dni-based-prediction

./: README.md  pyproject.toml
model/: __main__.py  create_dni_number.py  dataset.py  implementation.py  utils.py
